Refactor file structure

--- a/dev/blocks/about/_about.sass
+++ b/dev/blocks/about/_about.sass
@@ -1,8 +1,8 @@
 .about__content
-  @include content
+  @include pageContent
 
 .about__text
-  @include text
+  @include defaultText
   margin-bottom: 20px
   line-height: 1.5
 
@@ -17,7 +17,7 @@
 
 .about__img img
   vertical-align: middle
-  border: 1px solid $noactive-color
+  border: 1px solid $disabledColor
   padding: 2px
 
 @media screen and (max-width: 640px)
