--- a/dev/blocks/logo/_logo.sass
+++ b/dev/blocks/logo/_logo.sass
@@ -11,10 +11,10 @@
   top: .1em
 
 .logo__first
-  color: $base-color
+  color: $baseColor
 
 .logo__last
-  color: $pale-color
+  color: $altColor
 
 @media screen and (max-width: 560px)
   .logo
