--- a/dev/blocks/post-navigation/_post-navigation.sass
+++ b/dev/blocks/post-navigation/_post-navigation.sass
@@ -14,12 +14,12 @@
   margin-bottom: 20px
 
 .nav-previous a, .nav-next a
-  @include header
+  @include defaultHeader
   font-size: 14px
-  color: $pale-color
+  color: $altColor
   margin-bottom: 10px
   text-decoration: none
 
 .nav-previous span, .nav-next span
-  color: $base-color
+  color: $baseColor
   margin-left: 1em
