--- a/dev/components/button/_button.sass
+++ b/dev/components/button/_button.sass
@@ -1,10 +1,10 @@
 .button
-  @include header
+  @include defaultHeader
   text-decoration: none
   font-size: 12px
   text-align: center
   display: block
-  background: $head-color
+  background: $headColor
   color: #ffffff
   padding: 8px 10px 6px
   border: none
@@ -12,7 +12,7 @@
   transition: color 200ms
   outline: none
   &:hover
-    color: $pale-color
+    color: $altColor
 
 .button_more
   position: absolute
