--- a/dev/components/slider/_info.sass
+++ b/dev/components/slider/_info.sass
@@ -4,17 +4,17 @@
   left: 3%
   height: 24%
   width: 32%
-  background: $trans-bg-color
+  background: $transBackColor
   padding: 20px
   overflow: hidden
 
 .slider__header
-  @include header
+  @include defaultHeader
   color: #ffffff
   word-spacing: 2px
 
 .slider__text
-  @include text
+  @include defaultText
   color: #ffffff
   font-weight: 600
   margin-bottom: 0
