--- a/dev/index/site.sass
+++ b/dev/index/site.sass
@@ -3,6 +3,8 @@
 @import "../mixins/reset"
 @import "../mixins/theme"
 @import "../mixins/sprite"
+@import "../mixins/blocks"
+@import "../mixins/text"
 
 @import "../components/button/button"
 @import "../components/form/form"
