--- a/dev/blocks/blog/_blog.sass
+++ b/dev/blocks/blog/_blog.sass
@@ -1,5 +1,5 @@
 .blog__postlist
-  @include content
+  @include pageContent
 
 .blog__post
   position: relative
@@ -11,7 +11,7 @@
   height: 75px
   text-align: center
   line-height: 75px
-  background: $base-color
+  background: $baseColor
 
 .blog__icon
   font-size: 32px
@@ -28,7 +28,7 @@
   margin-bottom: 30px
 
 .blog__info
-  @include text
+  @include defaultText
   flex: 3
   margin: 1px 5px 20px 2px
 
@@ -37,23 +37,23 @@
   flex-direction: column
 
 .blog__info-title
-  @include header
+  @include defaultHeader
   font-size: 12px
   margin-bottom: 5px
 
 .blog__info-text
-  @include text
-  color: $noactive-color
+  @include defaultText
+  color: $disabledColor
   margin-bottom: 15px
   a
     text-decoration: none
-    color: $noactive-color
+    color: $disabledColor
 
 .blog__article
   flex: 11
   margin-left: 2px
   h2.blog__header
-    @include header
+    @include defaultHeader
     font-weight: 500
     margin-top: 3px
     margin-bottom: 15px
@@ -66,14 +66,14 @@
 
 .blog__link a
   display: block
-  @include text
-  color: $noactive-color
+  @include defaultText
+  color: $disabledColor
   text-decoration: none
   margin-top: -12px
   margin-bottom: 20px
 
 .blog__line
-  @include bottom-line
+  @include bottomLine
   margin-bottom: 45px
 
 @media screen and (max-width: 1130px)
@@ -98,16 +98,16 @@
 
   .blog__info-title
     display: inline-block
-    @include header
+    @include defaultHeader
     margin-right: 10px
     font-size: 12px
 
   .blog__info-text
     display: inline-block
-    @include text
-    color: $noactive-color
+    @include defaultText
+    color: $disabledColor
     text-transform: capitalize
     margin-right: 30px
     a
       text-decoration: none
-      color: $noactive-color
+      color: $disabledColor
