--- a/dev/components/form/_form.sass
+++ b/dev/components/form/_form.sass
@@ -5,15 +5,15 @@
 
 .form__textarea, .form__text
   outline: none
-  border: 1px solid $base-color
+  border: 1px solid $baseColor
   border-radius: 1px
   padding: 0 10px
-  @include text
+  @include defaultText
   font-size: 14px
   background: #ffffff
 
 .form__textarea::placeholder, .form__text::placeholder
-  @include header
+  @include defaultHeader
   font-size: 12px
   font-weight: 100
   line-height: 36px
@@ -24,7 +24,7 @@
   line-height: 22px
 
 .form__text
-  @include input
+  @include inputBlock
   height: 34px
 
 .form__textarea
@@ -40,12 +40,12 @@
   opacity: 0
   position: relative
   border-radius: 1px
-  @include header
+  @include defaultHeader
   padding: 10px 8px 6px
   margin-left: 25px
   font-size: 12px
-  background: $base-color
-  color: $alt-text-color
+  background: $baseColor
+  color: $altTextColor
   z-index: 1
 
 .form__label:before
