--- a/dev/components/navbar/_navbar.sass
+++ b/dev/components/navbar/_navbar.sass
@@ -18,25 +18,25 @@
   align-items: center
 
 .menu__item
-  @include header
+  @include defaultHeader
   padding-left: 25px
   list-style: none
 
 .menu__item a
   font-size: 16px
-  color: $noactive-color
+  color: $disabledColor
   text-decoration: none
   transition: color 200ms
   &:hover
-    color: $pale-color
+    color: $altColor
 
 .menu__item_active a
-  color: $base-color
+  color: $baseColor
   &:hover
-    color: $base-color
+    color: $baseColor
 
 .menu__item_active a span
-  color: $pale-color
+  color: $altColor
 
 @media screen and (max-width: 680px)
   .menu__item
@@ -75,16 +75,16 @@
     font-size: 28px
     line-height: 40px
     z-index: 100
-    color: $noactive-color
+    color: $disabledColor
     transition: color 500ms
 
   .menu__btn:hover
-    color: $pale-color
+    color: $altColor
 
   .menu__btn_blink
-    color: $base-color
+    color: $baseColor
     &:hover
-      color: $base-color
+      color: $baseColor
 
   .menu__list
     padding: 0
@@ -108,9 +108,9 @@
   .menu__item
     width: 100%
     height: 100%
-    border-top: 1px dotted $menu-bd-color
+    border-top: 1px dotted $menuBackColor
     &:last-child
-      border-bottom: 1px dotted $menu-bd-color
+      border-bottom: 1px dotted $menuBackColor
 
   .menu__link
     display: block
