--- a/dev/mixins/_theme.sass
+++ b/dev/mixins/_theme.sass
@@ -1,105 +1,9 @@
-$base-color: #e8603a
-$pale-color: #f2af9e
-$head-color: #e7663c
-$text-color: #000000
-$alt-text-color: #ffffff
-$quote-color: #5a5a5a
-$noactive-color: #b9b9b9
-$menu-bd-color: #dddddd
-$trans-bg-color: rgba(232, 96, 58, 0.8)
-
-@mixin header
-  font-family: "Bebas", sans-serif
-  font-weight: 500
-  word-spacing: 2px
-  color: $head-color
-  text-transform: uppercase
-  font-size: 18px
-  line-height: 1.5
-
-@mixin text
-  font-family: "Open Sans", sans-serif
-  font-size: 12px
-  color: $text-color
-  margin: 0
-  line-height: 1.5
-
-@mixin input
-  width: 215px
-  margin-bottom: 10px
-  @media screen and (max-width: 840px)
-    width: calc(100% - 160px)
-
-@mixin quote
-  margin-left: 50px
-  padding-left: 20px
-  font-style: italic
-  color: $quote-color
-  border-left: 8px solid $base-color
-
-@mixin post
-  p
-    @include text
-    margin-bottom: 20px
-  h1
-    @include header
-    margin-top: 40px
-    margin-bottom: 20px
-  h2
-    @include header
-    font-size: 14px
-    margin-top: 30px
-    margin-bottom: 20px
-  h3
-    @include header
-    font-size: 14px
-    font-style: italic
-    margin-top: 30px
-    margin-bottom: 20px
-  h4
-    @include header
-    font-size: 12px
-    margin-top: 20px
-    margin-bottom: 15px
-  h5
-    @include header
-    font-size: 12px
-    font-style: italic
-    margin-top: 20px
-    margin-bottom: 15px
-  strong
-    font-weight: 700
-  hr
-    @include bottom-line
-    margin-top: 20px
-    margin-bottom: 20px
-    border: 0
-  em
-    font-style: italic
-  blockquote
-    @include text
-    @include quote
-    margin-bottom: 20px
-  ul
-    margin-left: 20px
-    margin-bottom: 20px
-    li
-      @include text
-      list-style-type: disc
-  ol
-    margin-left: 20px
-    margin-bottom: 20px
-    li
-      @include text
-      list-style-type: decimal
-
-@mixin content
-  margin: 0 50px 45px 0
-  flex: 3
-
-@mixin bottom-line
-  position: relative
-  left: 0
-  height: 14px
-  width: 100%
-  background: url("../img/s_line.png") repeat-x left
+$baseColor: #e8603a
+$altColor: #f2af9e
+$headColor: #e7663c
+$textColor: #000000
+$altTextColor: #ffffff
+$quoteColor: #5a5a5a
+$disabledColor: #b9b9b9
+$menuBackColor: #dddddd
+$transBackColor: rgba(232, 96, 58, 0.8)
