--- a/dev/blocks/blog/_blog.sass
+++ b/dev/blocks/blog/_blog.sass
@@ -62,7 +62,7 @@
   text-decoration: none
 
 .blog__article, .blog__link
-  @include post
+  @include postContent
 
 .blog__link a
   display: block
