--- a/dev/mixins/_theme.sass
+++ b/dev/mixins/_theme.sass
@@ -3,7 +3,12 @@ $altColor: #f2af9e
 $headColor: #e7663c
 $textColor: #000000
 $altTextColor: #ffffff
+$backColor: #ffffff
 $quoteColor: #5a5a5a
 $disabledColor: #b9b9b9
 $menuBackColor: #dddddd
 $transBackColor: rgba(232, 96, 58, 0.8)
+$successColor: #489c24
+$altSuccessColor: #aad7a7
+$errorColor: #cc4b4b
+$altErrorColor: #ff8484
