--- a/dev/blocks/contact/_contact.sass
+++ b/dev/blocks/contact/_contact.sass
@@ -1,55 +1,14 @@
+@import "feedback"
+
+.contact
+  @media screen and (max-width: 640px)
+    flex-direction: column
+
 .contact__content
   @include pageContent
+  @media screen and (max-width: 640px)
+    margin-right: 0
 
 .map
   margin-bottom: 30px
   background: $altColor
-
-.feedback
-  display: flex
-
-.feedback__contacts
-  flex: 1
-
-.feedback__text
-  @include defaultText
-  margin: 0
-  padding-right: 30px
-
-.feedback__title
-  @include defaultText
-  font-weight: 600
-  color: $headColor
-  margin-bottom: 0
-
-.feedback__text span
-  font-weight: 600
-
-.feedback__form
-  flex: 2
-  display: flex
-  flex-direction: column
-
-.feedback__message
-  @include defaultText
-  @include inputBlock
-  font-weight: 600
-  color: $altTextColor
-  background: $baseColor
-  border: 1px solid $baseColor
-  border-radius: 1px
-  padding: 10px
-
-@media screen and (max-width: 640px)
-  .contact
-    flex-direction: column
-
-  .contact__content
-    margin-right: 0
-
-@media screen and (max-width: 480px)
-  .feedback
-    flex-direction: column
-
-  .feedback__contacts
-    margin-bottom: 20px
