--- a/dev/components/form/form.pug
+++ b/dev/components/form/form.pug
@@ -1,12 +1,12 @@
 form.form
     div
-        input.form__text(type="text", placeholder="first name" id="first_name")
+        input.form__input.input(type="text", placeholder="first name" id="first_name")
         label.form__label(for="first_name") Your first name
     div
-        input.form__text(type="text", placeholder="last name" id="last_name")
+        input.form__input.input(type="text", placeholder="last name" id="last_name")
         label.form__label(for="last_name") Your last name
     div
-        input.form__text(type="email", placeholder="email address" id="email")
+        input.form__input.input(type="email", placeholder="email address" id="email")
         label.form__label(for="email") Your e-mail
-    textarea.form__textarea(rows=10, placeholder="message")
-    button.button.button_submit(type="submit") Submit
+    textarea.form__input.input.input_type_textarea(rows=10, placeholder="message")
+    button.button.button_type_submit(type="submit") Submit
