--- a/dev/index/site.sass
+++ b/dev/index/site.sass
@@ -8,6 +8,8 @@
 
 @import "../components/button/button"
 @import "../components/form/form"
+@import "../components/input/input"
+@import "../components/message/message"
 @import "../components/navbar/navbar"
 @import "../components/sidebar/sidebar"
 @import "../components/slider/slider"
