--- a/dev/mixins/_blocks.sass
+++ b/dev/mixins/_blocks.sass
@@ -16,13 +16,7 @@
   width: 100%
   background: url("../img/s_line.png") repeat-x left
 
-@mixin inputBlock
-  width: 215px
-  margin-bottom: 10px
-  @media screen and (max-width: 840px)
-    width: calc(100% - 160px)
-
-@mixin post
+@mixin postContent
   p
     @include defaultText
     margin-bottom: 20px
