--- a/dev/blocks/about/_about.sass
+++ b/dev/blocks/about/_about.sass
@@ -3,12 +3,12 @@
     flex-direction: column
 
 .about__content
-  @include pageContent
+  @include page-content
   @media screen and (max-width: 640px)
     flex-direction: column
 
 .about__text
-  @include defaultText
+  @include default-text
   margin-bottom: 20px
   line-height: 1.5
 
@@ -26,5 +26,5 @@
 
 .about__img img
   vertical-align: middle
-  border: 1px solid $disabledColor
+  border: 1px solid $disabled-color
   padding: 2px
