--- a/dev/blocks/article-preview/_article-preview.sass
+++ b/dev/blocks/article-preview/_article-preview.sass
@@ -13,13 +13,13 @@
   margin-right: 0.3em
 
 .article-preview__header
-  @include defaultHeader
+  @include default-header
   font-weight: 500
   margin: 0 10px 25px 0
   padding: 5px 0
 
 .article-preview__text
-  @include defaultText
+  @include default-text
   font-size: 12px
   color: #404040
   margin: 0 20px 85px 2px
