--- a/dev/blocks/contact/_contact.sass
+++ b/dev/blocks/contact/_contact.sass
@@ -5,10 +5,10 @@
     flex-direction: column
 
 .contact__content
-  @include pageContent
+  @include page-content
   @media screen and (max-width: 640px)
     margin-right: 0
 
 .map
   margin-bottom: 30px
-  background: $altColor
+  background: $alt-color
