--- a/dev/blocks/contact/_feedback.sass
+++ b/dev/blocks/contact/_feedback.sass
@@ -9,14 +9,14 @@
     margin-bottom: 20px
 
 .feedback__text
-  @include defaultText
+  @include default-text
   margin: 0
   padding-right: 30px
 
 .feedback__title
-  @include defaultText
+  @include default-text
   font-weight: 600
-  color: $headColor
+  color: $head-color
   margin-bottom: 0
 
 .feedback__text span
