--- a/dev/blocks/logo/_logo.sass
+++ b/dev/blocks/logo/_logo.sass
@@ -11,10 +11,10 @@
   top: .1em
 
 .logo__first
-  color: $baseColor
+  color: $base-color
 
 .logo__last
-  color: $altColor
+  color: $alt-color
 
 @media screen and (max-width: 560px)
   .logo
