--- a/dev/blocks/post-navigation/_post-navigation.sass
+++ b/dev/blocks/post-navigation/_post-navigation.sass
@@ -14,12 +14,12 @@
   margin-bottom: 20px
 
 .nav-previous a, .nav-next a
-  @include defaultHeader
+  @include default-header
   font-size: 14px
-  color: $altColor
+  color: $alt-color
   margin-bottom: 10px
   text-decoration: none
 
 .nav-previous span, .nav-next span
-  color: $baseColor
+  color: $base-color
   margin-left: 1em
