--- a/dev/blocks/quote/_quote.sass
+++ b/dev/blocks/quote/_quote.sass
@@ -9,14 +9,14 @@ blockquote
   align-items: flex-start
 
 .blockquote p
-  @include defaultText
+  @include default-text
   font-style: italic
   font-size: 13px
   margin: 20px 20px 20px 10px
-  color: $quoteColor
+  color: $quote-color
 
 .blockquote i
   font-size: 28px
   margin-left: 30px
   margin-top: 20px
-  color: $baseColor
+  color: $base-color
