--- a/dev/blocks/recent/_recent.sass
+++ b/dev/blocks/recent/_recent.sass
@@ -3,7 +3,7 @@
   display: table
 
 .h-line__text
-  @include defaultHeader
+  @include default-header
   white-space: nowrap
   width: 200px
   padding-right: 20px
