--- a/dev/blocks/title/_title.sass
+++ b/dev/blocks/title/_title.sass
@@ -1,11 +1,11 @@
 .title
   height: 60px
   width: 100%
-  background: $headColor
+  background: $head-color
   margin-bottom: 25px
 
 .title__header
-  @include defaultHeader
+  @include default-header
   font-size: 24px
   font-weight: 500
   color: #ffffff
