--- a/dev/components/button/_button.sass
+++ b/dev/components/button/_button.sass
@@ -1,18 +1,19 @@
 .button
-  @include defaultHeader
+  @include default-header
   text-decoration: none
   font-size: 12px
   text-align: center
   display: block
-  background: $headColor
-  color: #ffffff
+  background: $head-color
+  color: $alt-text-color
   padding: 8px 10px 6px
-  border: none
+  border: 0
   margin-bottom: 40px
   transition: color 200ms
   outline: none
+
   &:hover
-    color: $altColor
+    color: $alt-color
 
 .button_more
   position: absolute
