--- a/dev/components/form/form.pug
+++ b/dev/components/form/form.pug
@@ -3,7 +3,7 @@ form.form
         input.form__input.input(type="text", placeholder="first name" id="first_name")
         label.form__label(for="first_name") Your first name
     div
-        input.form__input.input(type="text", placeholder="last name" id="last_name")
+        input.form__input.input.input_state_error(type="text", placeholder="last name" id="last_name")
         label.form__label(for="last_name") Your last name
     div
         input.form__input.input(type="email", placeholder="email address" id="email")
