--- a/dev/components/sidebar/_sidebar.sass
+++ b/dev/components/sidebar/_sidebar.sass
@@ -1,11 +1,12 @@
-@import "popup"
-@import "widget"
-@import "lists"
+@import 'popup'
+@import 'widget'
+@import 'lists'
+
 
 .sidebar
   flex: 1
 
 .sidebar__list
-  @include defaultText
+  @include default-text
   list-style: none
   padding-left: 0
