--- a/dev/components/slider/_btn.sass
+++ b/dev/components/slider/_btn.sass
@@ -16,7 +16,8 @@
   opacity: 0.6
   transition: opacity 200ms
   z-index: 10
-  stroke: #ffffff
-  fill: #ffffff
+  stroke: $back-color
+  fill: $back-color
+
   &:hover
     opacity: 1
