--- a/dev/components/slider/_info.sass
+++ b/dev/components/slider/_info.sass
@@ -4,18 +4,18 @@
   left: 3%
   height: 24%
   width: 32%
-  background: $transBackColor
+  background: $trans-back-color
   padding: 20px
   overflow: hidden
 
 .slider__header
-  @include defaultHeader
-  color: #ffffff
+  @include default-header
+  color: $alt-text-color
   word-spacing: 2px
 
 .slider__text
-  @include defaultText
-  color: #ffffff
+  @include default-text
+  color: $alt-text-color
   font-weight: 600
   margin-bottom: 0
   text-overflow: ellipsis
