--- a/dev/components/slider/_slider.sass
+++ b/dev/components/slider/_slider.sass
@@ -1,7 +1,8 @@
-@import "btn"
-@import "info"
-@import "slide"
-@import "thumbs"
+@import 'btn'
+@import 'info'
+@import 'slide'
+@import 'thumbs'
+
 
 .slider
   position: relative
