--- a/dev/components/slider/_thumbs.sass
+++ b/dev/components/slider/_thumbs.sass
@@ -7,9 +7,10 @@
   margin-bottom: 35px
 
 .thumbs__thumb
-  background: #000000
+  background: $alt-back-color
   margin-right: 10px
   height: 120px
+
   &:last-child
     margin-right: 0
 
@@ -19,6 +20,7 @@
   width: 100%
   height: 120px
   object-fit: cover
+
   &:hover
     opacity: 0.5
 
