--- a/dev/index/site.sass
+++ b/dev/index/site.sass
@@ -1,33 +1,33 @@
-@import "../fonts/fonts"
+@import '../fonts/fonts'
 
-@import "../mixins/reset"
-@import "../mixins/theme"
-@import "../mixins/sprite"
-@import "../mixins/blocks"
-@import "../mixins/text"
+@import '../mixins/reset'
+@import '../mixins/theme'
+@import '../mixins/sprite'
+@import '../mixins/blocks'
+@import '../mixins/text'
 
-@import "../components/button/button"
-@import "../components/form/form"
-@import "../components/input/input"
-@import "../components/message/message"
-@import "../components/navbar/navbar"
-@import "../components/sidebar/sidebar"
-@import "../components/slider/slider"
+@import '../components/button/button'
+@import '../components/form/form'
+@import '../components/input/input'
+@import '../components/message/message'
+@import '../components/navbar/navbar'
+@import '../components/sidebar/sidebar'
+@import '../components/slider/slider'
 
-@import "../blocks/about/about"
-@import "../blocks/article-preview/article-preview"
-@import "../blocks/blog/blog"
-@import "../blocks/body/body"
-@import "../blocks/contact/contact"
-@import "../blocks/container/container"
-@import "../blocks/footer/footer"
-@import "../blocks/logo/logo"
-@import "../blocks/pagination/pagination"
-@import "../blocks/portfolio/portfolio"
-@import "../blocks/post/post"
-@import "../blocks/post-navigation/post-navigation"
-@import "../blocks/quote/quote"
-@import "../blocks/recent/recent"
-@import "../blocks/sidepane/sidepane"
-@import "../blocks/title/title"
-@import "../blocks/wrappers/wrappers"
+@import '../blocks/about/about'
+@import '../blocks/article-preview/article-preview'
+@import '../blocks/blog/blog'
+@import '../blocks/body/body'
+@import '../blocks/contact/contact'
+@import '../blocks/container/container'
+@import '../blocks/footer/footer'
+@import '../blocks/logo/logo'
+@import '../blocks/pagination/pagination'
+@import '../blocks/portfolio/portfolio'
+@import '../blocks/post/post'
+@import '../blocks/post-navigation/post-navigation'
+@import '../blocks/quote/quote'
+@import '../blocks/recent/recent'
+@import '../blocks/sidepane/sidepane'
+@import '../blocks/title/title'
+@import '../blocks/wrappers/wrappers'
