--- a/dev/blocks/footer/_footer.sass
+++ b/dev/blocks/footer/_footer.sass
@@ -4,7 +4,7 @@
   justify-content: space-around
   flex-wrap: wrap
   width: 100%
-  background: $headColor
+  background: $head-color
   z-index: 10
   padding-bottom: 10px
 
@@ -14,22 +14,22 @@
   padding: 20px 30px
 
 .footer__header
-  @include defaultHeader
+  @include default-header
   color: #ffffff
   margin-bottom: 25px
 
 .footer__header a
-  @include defaultHeader
+  @include default-header
   color: #ffffff
   text-decoration: none
 
 
 .footer__text
-  @include defaultText
+  @include default-text
   color: #ffffff
 
 .footer__span
-  color: $altColor
+  color: $alt-color
 
 .footer__social
   margin-top: 20px
