--- a/dev/blocks/pagination/_pagination.sass
+++ b/dev/blocks/pagination/_pagination.sass
@@ -4,8 +4,8 @@
 
 .pagination li
   display: block
-  @include defaultHeader
-  background: $altColor
+  @include default-header
+  background: $alt-color
   height: 26px
   width: 26px
   text-align: center
@@ -14,10 +14,10 @@
   transition: background 200ms
 
 .pagination li:hover
-  background: $baseColor
+  background: $base-color
 
 .pagination .active
-  background: $baseColor
+  background: $base-color
 
 .pagination a
   display: block
