--- a/dev/blocks/post/_post.sass
+++ b/dev/blocks/post/_post.sass
@@ -3,7 +3,7 @@
   display: flex
 
 .post__content
-  @include pageContent
+  @include page-content
 
 .post__pic
   img
@@ -12,14 +12,14 @@
     margin-bottom: 40px
 
 .post__header
-  @include defaultHeader
+  @include default-header
   font-size: 20px
   font-weight: 500
   margin-top: 0
   margin-bottom: 30px
 
 .post__info
-  @include defaultText
+  @include default-text
   margin: 0 5px 20px 0
 
 .post__info-meta
@@ -28,33 +28,33 @@
 
 .post__info-title
   display: inline-block
-  @include defaultHeader
+  @include default-header
   margin-right: 10px
   font-size: 12px
 
 .post__info-text
   display: inline-block
-  @include defaultText
-  color: $disabledColor
+  @include default-text
+  color: $disabled-color
   margin-right: 30px
   a
     text-decoration: none
-    color: $disabledColor
+    color: $disabled-color
 
 .post__text
   margin-bottom: 40px
-  @include postContent
+  @include post-content
 
 .post__link a
   display: block
-  @include defaultText
-  color: $disabledColor
+  @include default-text
+  color: $disabled-color
   text-decoration: none
   margin-top: -12px
   margin-bottom: 20px
 
 .post__line
-  @include bottomLine
+  @include bottom-line
   margin-bottom: 20px
 
 @media screen and (max-width: 640px)
