--- a/dev/components/form/_form.sass
+++ b/dev/components/form/_form.sass
@@ -3,30 +3,27 @@
   flex-direction: column
   position: relative
 
-.form__input:focus + .form__label
-  opacity: 1
-
 .form__label
+  @include default-header
   opacity: 0
   position: relative
   border-radius: 1px
-  @include defaultHeader
   padding: 10px 8px 6px
   margin-left: 25px
   font-size: 12px
-  background: $baseColor
-  color: $altTextColor
+  background: $base-color
+  color: $alt-text-color
   z-index: 1
 
-.form__label:before
-  content: ''
-  position: absolute
-  height: 4px
-  width: 4px
-  left: -10px
-  top: 4px
-  border-radius: 1px
-  background: inherit
-  padding: 8px
-  transform: rotate(45deg)
-  z-index: -1
+  &::before
+    content: ''
+    position: absolute
+    height: 4px
+    width: 4px
+    left: -10px
+    top: 4px
+    border-radius: 1px
+    background: inherit
+    padding: 8px
+    transform: rotate(45deg)
+    z-index: -1
