--- a/dev/components/input/_input.sass
+++ b/dev/components/input/_input.sass
@@ -1,24 +1,29 @@
 .input
+  @include default-text
   outline: none
-  border: 1px solid $baseColor
+  border: 1px solid $base-color
   border-radius: 1px
   padding: 0 10px
-  @include defaultText
   font-size: 14px
-  background: #ffffff
+  background: $back-color
   width: 215px
   height: 34px
   margin-bottom: 10px
+
+  &:focus + .form__label
+    opacity: 1
+
+  &::placeholder
+    @include default-header
+    font-size: 12px
+    font-weight: 100
+    line-height: 36px
+    vertical-align: middle
+    background: inherit
+
   @media screen and (max-width: 840px)
     width: calc(100% - 160px)
 
-.input::placeholder
-  @include defaultHeader
-  font-size: 12px
-  font-weight: 100
-  line-height: 36px
-  vertical-align: middle
-  background: inherit
 
 .input_type_textarea
   overflow: auto
@@ -28,7 +33,13 @@
   margin-bottom: 10px
   padding: 10px
 
-.input_type_textarea::placeholder
-  line-height: 22px
+  &::placeholder
+    line-height: 22px
 
 .input_state_error
+  background: $back-error-color
+  border-color: $error-color
+  color: $error-color
+
+  &::placeholder
+    color: $error-color
