--- a/dev/components/sidebar/_widget.sass
+++ b/dev/components/sidebar/_widget.sass
@@ -3,24 +3,25 @@
   overflow: hidden
 
 .widget__title
-  @include defaultHeader
+  @include default-header
   margin-top: 0
   white-space: nowrap
   font-size: 14px
 
-.widget__title a
-  @include defaultHeader
-  font-size: 14px
-  text-decoration: none
+  & a
+    @include default-header
+    font-size: 14px
+    text-decoration: none
 
-.widget__title::after
-  content: ""
-  display: inline-block
-  margin-left: 15px
-  height: 14px
-  width: 100%
-  background: url("../img/s_line.png") repeat-x left
+  &::after
+    content: ''
+    display: inline-block
+    margin-left: 15px
+    height: 14px
+    width: 100%
+    background: url('../img/s_line.png') repeat-x left
 
-.widget__text p
-  @include defaultText
-  margin: 0
+.widget__text
+  & p
+    @include default-text
+    margin: 0
