--- a/dev/mixins/_text.sass
+++ b/dev/mixins/_text.sass
@@ -1,15 +1,15 @@
-@mixin defaultHeader
-  font-family: "Bebas", sans-serif
+@mixin default-header
+  font-family: 'Bebas', sans-serif
   font-weight: 500
   word-spacing: 2px
-  color: $headColor
+  color: $head-color
   text-transform: uppercase
   font-size: 18px
   line-height: 1.5
 
-@mixin defaultText
-  font-family: "Open Sans", sans-serif
+@mixin default-text
+  font-family: 'Open Sans', sans-serif
   font-size: 12px
-  color: $textColor
+  color: $text-color
   margin: 0
   line-height: 1.5
